--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -6,7 +6,6 @@
   <title>Homepage</title>
 
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   
   <!-- Custom CSS -->
   <link rel="stylesheet" href="/css/style.css">
@@ -14,7 +13,8 @@
 <body>
   <%- include('navbar.ejs') %>
 
-  <div class="container mt-5">
+<body class="homepage  mt-5">
+  
     <div class="card p-4 mx-auto">
       <h3 class="text-center mb-3">Welcome to the Library Management System</h3>
       <p class="text-center">This is a simple library management system built with Node.js, Express, and EJS.</p>
