--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -12,8 +12,8 @@
 </head>
 <body>
 
+<nav class="navbar navbar-expand-lg custom-navbar px-4">
 
-  <nav class="navbar navbar-expand-lg px-4">
     <a class="navbar-brand" href="#">Library Management System</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
