add category page

--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -10,7 +10,7 @@
   <div class="menu-section" id="categorySection">
     <h5 onclick="toggleMenu('categoryMenu')">📚 Category</h5>
     <ul id="categoryMenu">
-      <li>Add Category</li>
+      <li><a href="/categories/add">Add Category</a></li>
       <li>View Categories</li>
     </ul>
   </div>
