add category and  book modules for add & update category and book data in database

--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -11,14 +11,14 @@
     <h5 onclick="toggleMenu('categoryMenu')">📚 Category</h5>
     <ul id="categoryMenu">
       <li><a href="/categories/add">Add Category</a></li>
-      <li>View Categories</li>
+      <li><a href="/categories/view">View Categories</a></li>
     </ul>
   </div>
   <div class="menu-section" id="bookSection">
     <h5 onclick="toggleMenu('bookMenu')">📖 Book</h5>
     <ul id="bookMenu">
-      <li>Add Book</li>
-      <li>View Books</li>
+      <li><a href="/books/add">Add Book</a></li>
+      <li><a href="/books/view">View Books</a></li>
     </ul>
   </div>
 </div>
