--- a/views/viewStudent.ejs
+++ b/views/viewStudent.ejs
@@ -51,7 +51,7 @@
       <div class="row">
         <div class="col-md-3 p-0"><%- include('sidebar') %></div>
         <div class="col-md-9">
-          <h4 class="mb-4">View all Students</h4>
+          <h4 class="mb-4 text-light">View all Students</h4>
           <form class="d-flex search-box" method="get" action="/user/view">
             <input
               class="search-box"
